IMPROVE: Many minor things

--- a/02_ApplicationLayer.tex
+++ b/02_ApplicationLayer.tex
@@ -93,6 +93,7 @@
                 \end{itemize}
             \item Used by the roots servers for load balancing
             \item Allows DNS system to scale
+            \item Done for e.g. root server
         \end{itemize}
     \item For the system to work, we need
         \begin{itemize}
