--- a/07_PhysicalLayer.tex
+++ b/07_PhysicalLayer.tex
@@ -36,7 +36,11 @@
                         \end{itemize}
                 \end{itemize}
             \item $L = \frac{M}{R} + D$
-            \item High of slow rate or long link
+            \item High if:
+                \begin{itemize}
+                    \item Slow rate or
+                    \item Long link
+                \end{itemize}
         \end{itemize}
     \ides{Bandwidth-Delay (BD) Product:} Amount of data in flight
         \begin{itemize}
@@ -104,9 +108,9 @@
     \item Different frequencies have different properties (e.g. influence by rain etc.)
      \item Fewer frequencies $\implies$ less bandwidth $\implies$ degraded signal
         \begin{itemize}
-            \item High frequencies carry a great deal of the data
+            \item The high frequencies carry a great deal of the data
         \end{itemize}
-    \ides{Bandwith:} information carrying capacity
+    \ides{Bandwidth:} Information carrying capacity
         \begin{itemize}
             \item Measured in bits/sec
             \item In electrical engineering it is measured in Hz
@@ -116,7 +120,7 @@
             \item It is delayed since it propagates at $\frac{2}{3}c$
             \item It is attenuated
                 \begin{itemize}
-                    \item Especially signals above a cutoff are highly attenuated
+                    \item Especially signals above a cutoff frequency are highly attenuated
                 \end{itemize}
             \item Noise is added to the signal
         \end{itemize}
@@ -190,7 +194,6 @@
         \end{itemize}
     \ides{Passband Modulation}
         \begin{itemize}
-            \item Take a baseband modulation and apply passband modulation on top of it \todo{Is this correct?}
             \item Carries signal by modulating a carrier
                 \begin{itemize}
                     \ides{Carrier:} Some base signal oscillating at a desired frequency
