--- a/10_Appendix.tex
+++ b/10_Appendix.tex
@@ -69,6 +69,11 @@
             \item \verb+ss -au+: show UDP services
             \item \verb+-n+: show port instead of service name
         \end{itemize}
+    \ides{lsof}
+        \begin{itemize}
+            \item Show used ports
+            \item \verb+lsof -Pn -i4+
+        \end{itemize}
 \end{itemize}
 
 \subsection{DNS Stuff}
